syntax = "proto2";
option java_package = "com.photon.photonchain.network.proto";
option java_outer_classname = "TransactionHeadMessage";

message TransactionHead {
    required string transFrom = 1;
    required string transTo = 2;
    required int64 transValue = 3;
    required int64 fee = 4;
    required int64 timeStamp = 5;
}